--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>EmillyLinks</title>
+    <title>OpsMily Links</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="assets/images/favicon/favicon.png"
+    />
   </head>
   <body>
     <app-root></app-root>
